--- a/vinayak_portfolio/Vinayak_portfolio/index.html
+++ b/vinayak_portfolio/Vinayak_portfolio/index.html
@@ -108,6 +108,9 @@
         <p class="text__overlap">Know Me More</p>
       </h2>
       <div class="about__desc">
+        <div class="about_image">
+          <img src="./Assets/img/vk_img.png">
+        </div>
         <div class="about__parag">
           <h2 class="about__title">
             I'm <span class="aboutTitle__span">Vinayak Katara,</span> a Web
